force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <description>Alternative Email</description>
    <inlineHelpText>Enter Alternative Email of Event Organizer</inlineHelpText>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>