force-app/main/default/objects/Event_Organizer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone Of Event Organizer</description>
    <inlineHelpText>Enter Phone Of Event Organizer</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>